# swagger_server/models 2/__init__.py
@@ -1,12 +1,0 @@
-# coding: utf-8
-
-# flake8: noqa
-from __future__ import absolute_import
-# import models into model package
-from swagger_server.models.answer import Answer
-from swagger_server.models.client_id_forms_body import ClientIdFormsBody
-from swagger_server.models.form_assignment import FormAssignment
-from swagger_server.models.form_response import FormResponse
-from swagger_server.models.form_template import FormTemplate
-from swagger_server.models.option import Option
-from swagger_server.models.question import Question
